--- a/.github/workflows/build-test-deploy.yml
+++ b/.github/workflows/build-test-deploy.yml
@@ -14,7 +14,7 @@ jobs:
       - run: npm run build
   test:
     needs: build
-    runs-on: ubutu-latest
+    runs-on: ubuntu-latest
     steps:
       - name: checkout repo
         uses: actions/checkout@v3
